--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -30,37 +30,28 @@ body {
 .container {
 	$margin-block: 4rem;
 	$margin-inline: 3rem;
-	$margin-bottom: $margin-block * 1.5;
 	max-width: 160rem;
-	max-height: 90rem;
-	// max-height: 100rem;
-	// max-height: 80vh;
+	max-height: 75vh;
 	border-radius: 16px;
 	box-shadow: 0rem 2.5rem 0 rgba($clr-black, .85);
 	overflow: hidden;
 	display: grid;
 	margin-top: $margin-block;
-	margin-bottom: $margin-bottom;
-
-	// @supports(max-height: 80svh) {
-	// max-height: 80svh;
-	// }
-
-	// @media only screen and (orientation: landscape) {
-	// min-height: 30rem;
-	// max-height: 80vw;
-	// max-height: 60rem;
-	// }
+	margin-bottom: $margin-block * 1.5;
 
 
-	// @media only screen and (max-width: 300px) {
-	// max-height: 30rem;
-	// }
+	@media only screen and (orientation: landscape) and (min-width: 300px) {
+		grid-template-columns: repeat(2, 1fr);
+	}
 
-	// margin-bottom: calc(var(--margin-block) * 2);
+	@media only screen and (max-width: 300px) {
+		margin: initial;
+		max-height: initial;
+	}
+
 	@include media(375em) {
-		// margin: var(--margin-block) var(--margin-inline);
-		// margin-right: calc(var(--margin-inline) * 1.5);
+		margin-left: $margin-inline;
+		margin-right: calc($margin-inline * 1.5);
 		box-shadow: 1.5rem 2.5rem 0 rgba($clr-black, .85);
 	}
 
@@ -76,9 +67,12 @@ body {
 	padding: min(12vw, min(6vw, 8rem));
 	background-color: rgba($clr-white, 0.5);
 	background-color: var(--bg-first-section);
+	position: relative;
 
 	display: grid;
 	place-content: center;
+	grid-template-columns: repeat(2, 1fr);
+	column-gap: 5rem;
 
 	a:link,
 	a:visited {
@@ -118,7 +112,7 @@ body {
 }
 
 .list {
-	$list-padding-left: 4ch;
+	$list-padding-left: clamp(4ch, 7vw, 4.25ch);
 	$list-padding-top: min(3vw, 2rem);
 	padding-top: $list-padding-top;
 	padding-bottom: min(3vw, 4rem);
@@ -129,11 +123,19 @@ body {
 
 	display: grid;
 	row-gap: min(1.5vw, 3rem);
+	// overflow: hidden auto;
+	// overflow-x: hidden;
 	overflow-y: auto;
 
 	@media only screen and (max-width: 300px) {
-		padding: 1.5rem;
-		padding-left: 2rem;
+		padding: $wearables-padding;
+		padding-left: $werables-list-padding-left;
+		padding-right: 1.5ch;
+	}
+
+	@media only screen and (orientation: landscape) and (width >=300px) and (width <=600px) {
+		padding-left: 3ch;
+		overflow-x: hidden;
 	}
 
 	// &__box {}
@@ -141,19 +143,44 @@ body {
 	&__title {
 		$title-padding-left: 2.5ch;
 		$title-padding-top: .75rem;
-		position: sticky;
 		$title-padding-bottom: 1.5rem;
+		z-index: 1;
 		top: calc($list-padding-top * -1);
 		width: calc((100% + $list-padding-left));
 		padding: $title-padding-top 0 $title-padding-bottom 0;
 		padding-left: $title-padding-left;
 		margin-left: -$title-padding-left;
+
+		//$ test
+		// position: sticky;
 		// background-color: lightsalmon;
+		// background-color: var(--bg-second-section);
+		// background-color: hsl(240, 6%, 13%);
 		//todo: add bg when sticky activates
+
+		@media only screen and (max-width: 300px) {
+			$wearables-title-padding-left: 2ch;
+			$wearables-title-padding-top: .25rem;
+			$wearables-title-padding-bottom: .5rem;
+			width: calc((100% + $werables-list-padding-left));
+			// top: -$wearables-padding;
+			top: calc(($wearables-padding * -1) - 1px);
+			padding: $wearables-title-padding-top 0 $wearables-title-padding-bottom $wearables-title-padding-left;
+		}
+
+		@media only screen and (orientation: landscape) and (width >=300px) and (width <=600px) {
+			// width: 100%;
+			padding-left: $title-padding-left - 1.5ch;
+		}
 	}
 
 	&__item {
 		max-width: max-content;
+
+		a {
+			position: relative;
+			z-index: 0;
+		}
 	}
 
 	&__item--indent {
@@ -161,11 +188,6 @@ body {
 		background-color: var(--bg-indent);
 		padding: .25rem 1rem;
 		border-radius: 5px;
-	}
-
-	& > * {
-		// display: grid;
-		// row-gap: min(1.5vw, 1rem);
 	}
 
 }
