--- a/src/sass/_toggle-switch.scss
+++ b/src/sass/_toggle-switch.scss
@@ -1,7 +1,8 @@
 .toggle {
-	--border: 3px solid;
+	--border: clamp(.1rem, .6vw, .3rem) solid;
 	display: flex;
 	align-items: center;
+
 
 	&__input {
 		clip: rect(0 0 0 0);
@@ -13,13 +14,14 @@
 		width: 1px;
 
 		&:focus + .toggle-track {
-			outline: 2px solid var(--clr-primary);
+			// outline: 2px solid var(--clr-primary);
 			border-radius: 999rem;
 		}
 	}
 
 	&-track {
 		background: transparent;
+		background: var(--bg-indent); //$ test
 		border: var(--border) var(--clr-primary);
 		border-radius: 999rem;
 		cursor: pointer;
@@ -43,6 +45,12 @@
 		// bottom: 2px;
 		top: 2px;
 		transition: transform var(--speed);
+
+		@media only screen and (max-width: 300px) {
+			// top: 0;
+		}
+
+		@include media(1024em) {}
 	}
 
 	&__input:checked + &-track &-indicator {
@@ -51,7 +59,89 @@
 	}
 
 	&__input:checked + &-track {
-		border: var(--border) transparent;
 		background: hsl(225, 5%, 16%);
+
+		//$ test
+		// border: var(--border) transparent;
 	}
+}
+
+
+// .theme {
+// 	position: absolute;
+// 	right: 0;
+// 	// bottom: min(2vh, 3rem);
+// 	top: 4rem;
+
+// 	&__input {
+// 		clip: rect(0 0 0 0);
+// 		clip-path: inset(50%);
+// 		height: 1px;
+// 		overflow: hidden;
+// 		position: absolute;
+// 		white-space: nowrap;
+// 		width: 1px;
+
+// 		&:checked + .theme__icon {
+// 			background-image: url(../assets/svg/moon-fill.svg);
+// 		}
+// 	}
+
+// 	&__icon {
+// 		$icon-size: 3rem;
+// 		cursor: pointer;
+// 		// display: inline-block;
+// 		display: flex;
+// 		// position: absolute;
+// 		// top: -1rem;
+// 		width: $icon-size;
+// 		height: $icon-size;
+// 		background-image: url(../assets/svg/sun.svg);
+// 		fill: $clr-white;
+// 		color: $clr-white;
+// 	}
+// }
+
+.theme {
+	grid-column: 2 / 3;
+	align-self: center;
+	margin-bottom: .5rem;
+
+	&__input {
+		clip: rect(0 0 0 0);
+		clip-path: inset(50%);
+		height: 1px;
+		overflow: hidden;
+		position: absolute;
+		white-space: nowrap;
+		width: 1px;
+
+		&:focus .haha {
+			outline: 2px solid var(--clr-primary);
+		}
+	}
+}
+
+.icon {
+	$icon-size: 5rem;
+	cursor: pointer;
+	display: flex;
+	width: $icon-size;
+	height: $icon-size;
+	background-color: lightsalmon;
+	fill: $clr-white;
+	overflow: visible;
+
+	&-moon {
+		background-color: unset;
+		fill: var(--clr-primary);
+		width: $icon-size;
+		height: $icon-size;
+	}
+}
+
+.theme,
+.first-section__spent {
+	//todo move twitter to layout
+	grid-row: 1 / 2;
 }
